# rtype

./: .gitattributes  CMakeLists.txt  Doxyfile  README.md  conanfile.txt
client/include/components/: Animator.hpp  Button.hpp  Camera.hpp  Effect.hpp  Event.hpp  Input.hpp  OpacityChanger.hpp  Parallax.hpp  Rectangle.hpp  Score.hpp  Sound.hpp  Sprite.hpp  Text.hpp
client/include/systems/: AnimationSystem.hpp  LifeSystem.hpp  MovementSystem.hpp  NetworkSystem.hpp  SFMLSystem.hpp  ScoreSystem.hpp  SoundSystem.hpp  TimerSystem.hpp
client/include/utilities/: AssetsManager.hpp  EntityLoader.hpp  GameSettings.hpp  GameWrapper.hpp
client/include/worlds/: GameWorld.hpp  InLobbyWorld.hpp  LobbyListWorld.hpp  MenuWorld.hpp  SettingsWorld.hpp  World.hpp  WorldManager.hpp
client/sources/: main.cpp
client/sources/components/: Animator.cpp  Button.cpp  Camera.cpp  Effect.cpp  Event.cpp  Input.cpp  OpacityChanger.cpp  Parallax.cpp  Rectangle.cpp  Score.cpp  Sound.cpp  Sprite.cpp  Text.cpp
client/sources/systems/: AnimationSystem.cpp  LifeSystem.cpp  MovementSystem.cpp  NetworkSystem.cpp  SFMLSystem.cpp  ScoreSystem.cpp  SoundSystem.cpp  TimerSystem.cpp
client/sources/utilities/: AssetsManager.cpp  EntityLoader.cpp  GameSettings.cpp  GameWrapper.cpp
client/sources/worlds/: GameWorld.cpp  InLobbyWorld.cpp  LobbyListWorld.cpp  MenuWorld.cpp  SettingsWorld.cpp  World.cpp  WorldManager.cpp
commons/components/: Controller.cpp  Controller.hpp  Status.cpp  Status.hpp  Timer.cpp  Timer.hpp  Transform.cpp  Transform.hpp
commons/dl/: DLLoader.cpp  DLLoader.hpp  DirectoryReader.cpp  DirectoryReader.hpp
commons/exception/: RtypeException.hpp
commons/network/: HostInfos.hpp
commons/network/datagram/: AvailableLobbiesDatagram.cpp  AvailableLobbiesDatagram.hpp  BinaryDatagram.cpp  BinaryDatagram.hpp  ConnectLobbyDatagram.cpp  ConnectLobbyDatagram.hpp  ConnectServerDatagram.cpp  ConnectServerDatagram.hpp  CreateLobbyDatagram.cpp  CreateLobbyDatagram.hpp  Datagram.cpp  Datagram.hpp  DeletePlayerDatagram.cpp  DeletePlayerDatagram.hpp  EndGameDatagram.cpp  EndGameDatagram.hpp  EnemyDeathDatagram.cpp  EnemyDeathDatagram.hpp  FetchLobbiesDatagram.cpp  FetchLobbiesDatagram.hpp  InputDatagram.cpp  InputDatagram.hpp  LeaveGameDatagram.cpp  LeaveGameDatagram.hpp  LeaveLobbyDatagram.cpp  LeaveLobbyDatagram.hpp  LobbyInfosDatagram.cpp  LobbyInfosDatagram.hpp  PlayerDeathDatagram.cpp  PlayerDeathDatagram.hpp  RequestStartGameDatagram.cpp  RequestStartGameDatagram.hpp  RtypeDatagram.cpp  RtypeDatagram.hpp  SpawnEnemyDatagram.cpp  SpawnEnemyDatagram.hpp  StartGameDatagram.cpp  StartGameDatagram.hpp  TriggerBonusDatagram.cpp  TriggerBonusDatagram.hpp  (+2 more)
commons/other/: BonusType.hpp  ComponentInfos.hpp  EndGameInfos.hpp  EnemyId.hpp  GameKeys.hpp  Lobby.hpp  Player.hpp
commons/types/: Vector.hpp
docs/rfc/: convert_xml_to_rfc.py  rfc.txt  rfc.xml
dynamic_libraries/: CMakeLists.txt
dynamic_libraries/camera_system/: CMakeLists.txt  CameraSystem.cpp  CameraSystem.hpp
dynamic_libraries/collision_system/: CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.hpp
dynamic_libraries/garbage_system/: CMakeLists.txt  GarbageSystem.cpp  GarbageSystem.hpp
dynamic_libraries/life_system/: CMakeLists.txt  LifeSystem.cpp  LifeSystem.hpp
dynamic_libraries/monster_system/: CMakeLists.txt  MonsterSystem.cpp  MonsterSystem.hpp
dynamic_libraries/movement_system/: CMakeLists.txt  MovementSystem.cpp  MovementSystem.hpp
dynamic_libraries/timer_system/: CMakeLists.txt  TimerSystem.cpp  TimerSystem.hpp
lib/ecs/: CMakeLists.txt  README.md
lib/ecs/include/components/: Component.hpp  IComponent.hpp
lib/ecs/include/entities/: Entity.hpp  EntityManager.hpp  IEntity.hpp
lib/ecs/include/systems/: ISystem.hpp  System.hpp  SystemManager.hpp
lib/ecs/sources/components/: Component.cpp
lib/ecs/sources/entities/: Entity.cpp  EntityManager.cpp
lib/ecs/sources/systems/: System.cpp  SystemManager.cpp
server/include/: Game.hpp  GameManager.hpp  NetworkManager.hpp  RtypeServer.hpp  ThreadSafeQueue.hpp  UdpSocket.hpp
server/include/components/: BoxCollider.hpp  Camera.hpp  Damager.hpp  Monster.hpp  Shoot.hpp
server/include/systems/: DLLSystem.hpp
server/interface/: INetworkManager.hpp  IUdpSocket.hpp
server/sources/: Game.cpp  GameManager.cpp  NetworkManager.cpp  RtypeServer.cpp  ThreadSafeQueue.cpp  UdpSocket.cpp  main.cpp
server/sources/components/: BoxCollider.cpp  Camera.cpp  Damager.cpp  Monster.cpp  Shoot.cpp
server/sources/systems/: DLLSystem.cpp
tests/: tests_entity.json
tests/commons/network/datagram/: testAvailableLobbiesDatagram.cpp  testBinaryDatagram.cpp  testConnectLobbyDatagram.cpp  testConnectServerDatagram.cpp  testCreateLobbyDatagram.cpp  testDatagram.cpp  testEndGameDatagram.cpp  testEnemyDeathDatagram.cpp  testFetchLobbiesDatagram.cpp  testInputDatagram.cpp  testLeaveGameDatagram.cpp  testLeaveLobbyDatagram.cpp  testLobbyInfosDatagram.cpp  testPlayerDeathDatagram.cpp  testRequestStartGameDatagram.cpp  testRtypeDatagram.cpp  testSpawnEnemyDatagram.cpp  testStartGameDatagram.cpp  testTriggerBonusDatagram.cpp  testUpdateComponentDatagram.cpp
